Fixed opacity transition to end at full visibility

--- a/style.css
+++ b/style.css
@@ -37,3 +37,7 @@ body{
         from{
             opacity: 0;
         }
+        to{
+            opacity: 1;
+        }
+}
